--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "style-loader": "^1.2.1",
-    "webpack-cli": "^3.3.12",
-    "cypress": "^9.5.0"
+    "webpack-cli": "^3.3.12"  
   },
   "jest": {
     "moduleNameMapper": {
